<resources>
    <string name="app_name">TodayIsApp</string>
    <string name="dateMeeting">Date:</string>
    <string name="todayisMeeting">Today Is</string>
    <string name="explanationMeeting">Please enter the first date and which school day it is:</string>
    <string name="Daynumber">Day Number:</string>
    <string name="Go">Go!</string>
    <string name="Change">Change</string>

    <string-array name="DaysOfTheWeek">
        <item>Day 1</item>
        <item>Day 2</item>
        <item>Day 3</item>
        <item>Day 4</item>
        <item>Day 5</item>
        <item>Day 6</item>
    </string-array>
</resources>
